<resources >
    <string name="app_name" translatable="false">斗圈</string>
    <string name="main_tab_chat" translatable="false">斗圈</string>
    <string name="main_tab_contacts" translatable="false">通讯录</string>
    <string name="main_tab_discover" translatable="false">探索</string>
    <string name="main_tab_news" translatable="false">资讯</string>
    <string name="main_tab_shopping" translatable="false">商城</string>
    <string name="main_tab_mine" translatable="false">我的</string>
    <string name="tip_is_loading" translatable="false">正在努力加载中...</string>
    <string name="tip_data_empty" translatable="false">没有数据!</string>
    <string name="tip_click_refresh" translatable="false">点击刷新</string>
    <string name="tip_net_error" translatable="false">您的网络异常,请检查网络后点击重试</string>
    <string name="network_poor" translatable="false">您的网络状况不佳，请检查网络连接</string>
    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="nim_status_bar_multi_messages_incoming" translatable="false">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text" translatable="false">%1$s有新消息</string>
    <string name="nim_status_bar_image_message" translatable="false">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message" translatable="false">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message" translatable="false">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message" translatable="false">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message" translatable="false">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message" translatable="false">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message" translatable="false">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message" translatable="false">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content" translatable="false">你收到一条新消息</string>
    <string name="on_line" translatable="false">在线</string>
    <string name="on_line_pc" translatable="false">PC在线</string>
    <string name="on_line_mac" translatable="false">Mac在线</string>
    <string name="on_line_web" translatable="false">web在线</string>
    <string name="client_aos" translatable="false">Android</string>
    <string name="client_ios" translatable="false">iOS</string>
    <string name="on_line_busy" translatable="false">忙碌</string>
    <string name="off_line" translatable="false">离线</string>
    <string name="computer_version" translatable="false">斗圈电脑版</string>
    <string name="web_version" translatable="false">斗圈网页版</string>
    <string name="mobile_version" translatable="false">斗圈移动版</string>
    <string name="kickout_notify" translatable="false">下线通知</string>
    <string name="multiport_logging" translatable="false">正在使用</string>
    <string name="start_session_record" translatable="false">我发起了白板演示</string>
    <string name="session_end_record" translatable="false">白板演示已结束</string>
    <string name="input_panel_guess" translatable="false">猜 拳</string>
    <string name="input_panel_audio_call" translatable="false">语音通话</string>
    <string name="input_panel_video_call" translatable="false">视频通话</string>
    <string name="input_panel_file" translatable="false">发送文件</string>
    <string name="input_panel_RTS" translatable="false">白 板</string>
    <string name="input_panel_burn" translatable="false">阅后即焚</string>
    <string name="input_panel_tip" translatable="false">Tip</string>
    <string name="input_panel_ack_msg" translatable="false">已读回执</string>
    <string name="message_history_query" translatable="false">云消息记录</string>
    <string name="message_search_title" translatable="false">搜索本地消息记录</string>
    <string name="message_clear" translatable="false">清空本地消息记录</string>
    <string name="message_info" translatable="false">聊天信息</string>
    <string name="snapchat_longclick_to_view" translatable="false">按住查看</string>
    <string name="no_friends" translatable="false">暂无好友</string>
    <string name="no_friends_click_retry" translatable="false">暂无好友, 请点击重试</string>
    <string name="new_friends" translatable="false">新的朋友</string>
    <string name="add_friend" translatable="false">添加好友</string>
    <string name="invite_wechat_contacts" translatable="false">邀请微信联系人</string>
    <string name="mobile_contact_matching" translatable="false">手机通讯录匹配</string>
    <string name="saved_group_chat" translatable="false">已保存的群聊</string>
    <string name="pic_contacts" translatable="false">位联系人</string>
    <string name="detail_info" translatable="false">详细资料</string>
    <string name="please_input_phone_number_or_dq_number" translatable="false">请输入手机号</string>
    <string name="inviter_wechat" translatable="false">邀请微信中的朋友</string>
    <string name="inviter_contact" translatable="false">邀请手机联系人</string>
    <string name="matchContact" translatable="false">匹配手机通讯录中的朋友</string>
    <string name="saoFriend" translatable="false">扫描好友的二维码</string>
    <string name="chat_to_me_add_friend" translatable="false">即可添加我为好友，一起聊天</string>
    <string name="we_chat_share" translatable="false">加我为好友,一起用斗圈聊天!</string>
    <string name="user_not_exist" translatable="false">用户不存在</string>
    <string name="title_select_friend_delete" translatable="false">删除成员</string>
    <string name="title_select_friend_shield" translatable="false">选择成员</string>
    <string name="search_contact_list_hint" translatable="false">搜索联系人</string>
    <string name="friend_delete" translatable="false">删除好友</string>
    <string name="add_blacklist" translatable="false">加入黑名单</string>
    <string name="remove_blacklist" translatable="false">移除黑名单</string>
    <string name="friend_fa" translatable="false">发送名片</string>
    <string name="set_remark" translatable="false">设置备注</string>
    <string name="delete_dialog_contacts" translatable="false">删除联系人</string>
    <string name="personal_info" translatable="false">个人信息</string>
    <string name="not_set_personal_info" translatable="false">未设置</string>
    <string name="into_the_group_of_way" translatable="false">进群方式</string>
    <string name="remove_friend_dialog_desc" translatable="false">将联系人%1$s删除，将同时删除与该联系人的聊天记录</string>
    <string name="delete" translatable="false">删除</string>
    <string name="delete_success" translatable="false">删除成功</string>
    <string name="no_data_for_team_list" translatable="false">当前群聊通讯录为空,可以在群聊详情中添加</string>
    <string name="agree_to_friend_request" translatable="false">同意好友请求</string>
    <string name="not_set_remark" translatable="false">未设置备注</string>
    <string name="add_user_tips" translatable="false">群主已开启群成员保护模式，无法通过该群添加好友，请通过其他方式添加用户</string>
    <string name="send_message" translatable="false">发送消息</string>
    <string name="sex" translatable="false">性别</string>
    <string name="back" translatable="false">返回</string>
    <string name="choice_from_phone_list" translatable="false">从手机通讯录选择</string>
    <string name="user_portrait" translatable="false">用户头像</string>
    <string name="please_input_phone_number" translatable="false">please_input_phone_number</string>
    <string name="the_user_does_not_exist" translatable="false">该用户不存在</string>
    <string name="not_black_list" translatable="false">暂无黑名单</string>
    <string name="not_new_friend" translatable="false">暂无新朋友</string>
    <string name="not_team_invite" translatable="false">暂无群邀请</string>
    <string name="add_group_confirm_add" translatable="false">确认加入该群聊</string>
    <string name="add_group_add" translatable="false">加入群聊</string>
    <string name="add_group_auth_ins" translatable="false">群主开启了群认证\n只能好友邀请进群</string>
    <string name="add_group_add_again" translatable="false">请重新加入</string>
    <string name="set_chuiniu_tips" translatable="false">1.斗圈号是账号的唯一凭证，只能设置一次。\n2.设置斗圈账号后，可通过搜索斗圈账号添加您为好友。</string>
    <string name="set_chuiniu_hint" translatable="false">以字母开头，6~20个字母、数字、下划线。</string>
    <string name="set_chuiniu_warning" translatable="false">斗圈号仅支持使用6-20个字母、数字、下划线或减号，以字母开头</string>
    <string name="set_chuiniu_dialog_tips" translatable="false">你确定将斗圈号设置为%1$s吗？确定后不可修改。</string>
    <string name="mine_chuiniu_num" translatable="false">斗圈号：%1$s</string>
    <string name="mine_safe_chuiniu_num" translatable="false">允许通过斗圈号搜索到我</string>
    <string name="phone" translatable="false">手机号</string>
    <string name="setting" translatable="false">设置</string>
    <string name="feeedback_name" translatable="false">姓名</string>
    <string name="setting_account_bing" translatable="false">账号与绑定</string>
    <string name="setting_new_message" translatable="false">新消息通知</string>
    <string name="setting_safe" translatable="false">安全与隐私</string>
    <string name="setting_font_size" translatable="false">字体大小</string>
    <string name="setting_chat_bg" translatable="false">聊天背景</string>
    <string name="setting_cache" translatable="false">缓存设置</string>
    <string name="complaint" translatable="false">投诉举报</string>
    <string name="setting_about" translatable="false">关于斗圈</string>
    <string name="setting_login_out" translatable="false">退出登录</string>
    <string name="setting_log_out" translatable="false">注销账号</string>
    <string name="setting_logout_ins" translatable="false">退出后不会删除任何历史数据,下次登录依然可以使用本账号</string>
    <string name="dialog_bottom_picture" translatable="false">拍照</string>
    <string name="dialog_bottom_from_pics" translatable="false">从手机相册选择</string>
    <string name="setting_newmsg_notify" translatable="false">新消息通知</string>
    <string name="setting_newmsg_close_ins" translatable="false">关闭后,手机将不再接收新消息通知</string>
    <string name="setting_newmsg_voice" translatable="false">声音</string>
    <string name="setting_newmsg_vibration" translatable="false">震动</string>
    <string name="setting_newmsg_poke" translatable="false">接受戳一下消息</string>
    <string name="setting_newmsg_voice_ins" translatable="false">当应用运行时,你可以设置是否需要声音或者震动</string>
    <string name="setting_since_the_launch_of_applications" translatable="false">设置应用自启动</string>
    <string name="setting_allow_application_background_is_active" translatable="false">允许应用后台活跃</string>
    <string name="next_step" translatable="false">下一步</string>
    <string name="set_pay_pwd" translatable="false">设置支付密码</string>
    <string name="write_bank_card_info" translatable="false">填写银行卡信息</string>
    <string name="bank_name" translatable="false">银行名称</string>
    <string name="id_card_number" translatable="false">身份证号</string>
    <string name="professional" translatable="false">职业</string>
    <string name="area" translatable="false">地区</string>
    <string name="please_choice_professional" translatable="false">请选择职业</string>
    <string name="please_choice_area" translatable="false">请选择地区</string>
    <string name="set_new_pay_pwd" translatable="false">设置新支付密码</string>
    <string name="input_again" translatable="false">再次输入</string>
    <string name="pwd_is_six_number" translatable="false">密码为6位数字</string>
    <string name="please_input_new_pay_pwd" translatable="false">请再次输入新的支付密码</string>
    <string name="wallet_open" translatable="false">开通钱包</string>
    <string name="name_write" translatable="false">请填写姓名</string>
    <string name="card_no_write" translatable="false">请填写身份证号</string>
    <string name="id_card_no_validity" translatable="false">身份证有效期</string>
    <string name="card_no_validity_write" translatable="false">请填写身份证有效期</string>
    <string name="contacts_address" translatable="false">联系地址</string>
    <string name="contacts_address_write" translatable="false">请填写地址</string>
    <string name="set_pay_pwd_write" translatable="false">请输入六位密码</string>
    <string name="set_pay_pwd_again" translatable="false">再次输入密码</string>
    <string name="set_pay_pwd_again_write" translatable="false">请再次输入密码</string>
</resources>