<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.da.library.view.DqToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dd_dp44"
        app:dqtTitle="@string/setting"/>

    <LinearLayout
        android:id="@+id/settingActivityBindAccountLayout"
        style="@style/mine_item_layout"
        android:layout_marginTop="@dimen/dd_dp10">
        <TextView
            android:id="@+id/settingActivityBindAccountTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_account_bing"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingActivityNewMessageLayout"
        style="@style/mine_item_layout"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dd_dp10">
        <TextView
            android:id="@+id/settingActivityNewMessageTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_new_message"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <View
        style="@style/OnePxDivider"/>
    <LinearLayout
        android:id="@+id/settingActivitySafeLayout"
        style="@style/mine_item_layout">
        <TextView
            android:id="@+id/settingActivitySafeTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_safe"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingActivityFontSizeLayout"
        style="@style/mine_item_layout"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dd_dp10">
        <TextView
            android:id="@+id/settingActivityFontSizeTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_font_size"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <View
        style="@style/OnePxDivider"/>
    <LinearLayout
        android:id="@+id/settingActivityChatBgLayout"
        style="@style/mine_item_layout">
        <TextView
            android:id="@+id/settingActivityChatBgTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_chat_bg"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <View
        style="@style/OnePxDivider"/>
    <LinearLayout
        android:id="@+id/settingActivityCacheLayout"
        android:visibility="gone"
        style="@style/mine_item_layout">
        <TextView
            android:id="@+id/settingActivityCacheTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_cache"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <View
        style="@style/OnePxDivider"/>
    <LinearLayout
        android:id="@+id/complaintLayout"
        style="@style/mine_item_layout">
        <TextView
            android:id="@+id/complaintTxt"
            style="@style/mine_item_text"
            android:text="@string/complaint"
            android:layout_weight="1" />
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingActivityAboutLayout"
        style="@style/mine_item_layout"
        android:layout_marginTop="@dimen/dd_dp10">
        <TextView
            android:id="@+id/settingActivityAboutTxt"
            style="@style/mine_item_text"
            android:text="@string/setting_about"
            android:layout_weight="1" />
        <ImageView
            android:id="@+id/settingActivityAboutRedDot"
            android:layout_width="@dimen/dd_dp8"
            android:layout_height="@dimen/dd_dp8"
            android:src="@mipmap/icon_red_dot"
            android:layout_marginRight="@dimen/dd_dp10"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dd_dp10"/>
        <ImageView
            style="@style/comm_arrow_right"/>
    </LinearLayout>
    <TextView
        android:id="@+id/settingActivityBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dd_dp50"
        android:gravity="center"
        android:layout_marginTop="@dimen/dd_dp15"
        android:background="@drawable/comm_item_selector"
        android:text="@string/setting_login_out"
        android:textColor="@color/black"
        android:textSize="@dimen/dd_dp16"/>
    <TextView
        android:id="@+id/settingLogOutBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dd_dp50"
        android:gravity="center"
        android:layout_marginTop="@dimen/dd_dp15"
        android:background="@drawable/comm_item_selector"
        android:text="@string/setting_log_out"
        android:textColor="@color/black"
        android:textSize="@dimen/dd_dp16"/>
</LinearLayout>
