<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_page_bg"
    android:orientation="vertical">

    <com.da.library.widget.CommTitle
        android:id="@+id/forgot_set_pwd_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/write_bank_card_info"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="@dimen/dd_dp20"
                style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:text="@string/bank_name" />

                <TextView
                    android:id="@+id/forgot_set_pwd_bank_name_tv"
                    style="@style/comm_sub_item_right_tv"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dd_dp20"
                style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:text="@string/feeedback_name" />

                <TextView
                    android:id="@+id/forgot_set_pwd_user_name_tv"
                    style="@style/comm_sub_item_right_tv"/>
            </LinearLayout>

            <View style="@style/item_line"/>

            <LinearLayout style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:text="@string/id_card_number" />

                <TextView
                    android:id="@+id/forgot_set_pwd_id_number_tv"
                    style="@style/comm_sub_item_right_tv"/>
            </LinearLayout>

            <View style="@style/item_line"/>
            <!--手机号-->
            <LinearLayout
                style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/forgot_set_pwd_phone_et"
                    style="@style/comm_sub_item_right_et"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="13"
                    tools:ignore="TextFields" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/forgot_set_pwd_clear_phone_iv"
                    style="@style/clear_input_style_no_margin"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forgot_set_pwd_layout"
                android:layout_marginTop="@dimen/dd_dp20"
                style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:layout_width="@dimen/dd_dp120"
                    android:text="@string/set_new_pay_pwd" />

                <EditText
                    android:id="@+id/forgot_set_pwd_et"
                    style="@style/comm_sub_item_right_et"
                    android:hint="@string/pwd_is_six_number"
                    android:maxLength="6"/>

            </LinearLayout>

            <View style="@style/item_line"/>

            <LinearLayout
                android:id="@+id/forgot_set_pwd_again_layout"
                style="@style/comm_sub_item_layout">

                <TextView
                    style="@style/comm_sub_item_left_tv"
                    android:layout_width="@dimen/dd_dp120"
                    android:text="@string/input_again" />

                <EditText
                    android:id="@+id/forgot_set_pwd_again_et"
                    style="@style/comm_sub_item_right_et"
                    android:hint="@string/please_input_new_pay_pwd"
                    android:maxLength="6"/>
            </LinearLayout>

            <TextView
                android:id="@+id/forgot_set_pwd_confirm_tv"
                style="@style/comm_corner_btn"
                android:layout_marginLeft="@dimen/dd_dp12"
                android:layout_marginRight="@dimen/dd_dp12"
                android:layout_marginTop="@dimen/dd_dp30"
                android:layout_marginBottom="@dimen/dd_dp200"
                android:text="@string/next_step"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>